# -*- coding: utf-8 -*-
# vim: set fileencoding=utf-8

INCLUDE(CMakeSubTargets.cmake)

QT5_ADD_RESOURCES (QRC_FILES icons.qrc)

CONFIGURE_FILE (antiqua.rc.cmake
 ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECTNAME}.rc
)

IF (CMAKE_HOST_WIN32)
SET (PROJECT_RESOURCE_WINDOWS ${CMAKE_CURRENT_SOURCE_DIR}/${PROJECTNAME}.rc)
ELSE (CMAKE_HOST_WIN32)
SET (PROJECT_RESOURCE_WINDOWS "")
ENDIF (CMAKE_HOST_WIN32)

SET (PROJECT_SOURCES
  main.cpp
  mapplication.cpp
  antiquasystemtray.cpp
  mwindow.cpp
  statusbar.cpp
  workspace.cpp
  workspacetabbar.cpp
  socketserver.cpp
  ${QRC_FILES}
)

SET (PROJECT_HEADERS
  mapplication.h
  antiquasystemtray.h
  mwindow.h
  statusbar.h
  workspace.h
  workspacetabbar.h
  socketserver.h
)

ADD_EXECUTABLE(${PROJECTNAME}
  ${PROJECT_HEADERS}
  ${PROJECT_SOURCES}
  ${PROJECT_RESOURCE_WINDOWS}
)

TARGET_LINK_LIBRARIES(${PROJECTNAME} PRIVATE
    Qt${QT_VERSION_MAJOR}::Core
    Qt${QT_VERSION_MAJOR}::Gui
    Qt${QT_VERSION_MAJOR}::Network
    Qt${QT_VERSION_MAJOR}::Widgets
    Qt${QT_VERSION_MAJOR}::Sql
    ${_link_sub_libs}
)

SET_TARGET_PROPERTIES(${PROJECTNAME} PROPERTIES
  OUTPUT_NAME ${PROJECTNAME}
  LINKER_LANGUAGE CXX
  WIN32_EXECUTABLE TRUE
)

IF (ANTIQUA_LSB_INSTALL)
  INSTALL (TARGETS ${PROJECTNAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin/
    COMPONENT Core
  )
ELSE (ANTIQUA_LSB_INSTALL)
  INSTALL (TARGETS ${PROJECTNAME}
    RENAME ${PROJECTNAME}
    RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}
    COMPONENT Core
  )
ENDIF (ANTIQUA_LSB_INSTALL)

##EOF
