# -*- coding: utf-8 -*-
# vim: set fileencoding=utf-8

ADD_SUBDIRECTORY (utils)
ADD_SUBDIRECTORY (networking)
ADD_SUBDIRECTORY (assistant)
ADD_SUBDIRECTORY (autofill)
ADD_SUBDIRECTORY (completer)
ADD_SUBDIRECTORY (imaging)
ADD_SUBDIRECTORY (printing)
ADD_SUBDIRECTORY (settings)
ADD_SUBDIRECTORY (storage)
