## CMakeLists.txt

SET(source_FILES
  antiquacrm_untranslated.ts
  antiquacrm_de.ts
)

## ${PROJECTNAME}_*.qm
SET(TS_TRANSLATE
 antiquacrm_de.ts
 qtbase_de.ts
)

EXECUTE_PROCESS (COMMAND ${QT_QMAKE_EXECUTABLE} -query QT_INSTALL_BINS OUTPUT_VARIABLE QT_BINARY_TARGET)

FIND_PROGRAM (LRELEASE_EXECUTABLE "lrelease" PATHS ${QT_BINARY_TARGET})
SET(LRELEASE_OPTIONS
  -compress
  -nounfinished
  -removeidentical
)

FILE (MAKE_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR})
EXECUTE_PROCESS (COMMAND ${LRELEASE_EXECUTABLE} ${LRELEASE_OPTIONS} ${TS_TRANSLATE} -qm ${CMAKE_CURRENT_BINARY_DIR}/${PROJECTNAME}.qm
WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
COMMAND_ECHO STDOUT)
MESSAGE (STATUS "${PROJECTNAME}.qm")

FILE(GLOB QM_FILES "${CMAKE_CURRENT_BINARY_DIR}/*.qm")

INSTALL (FILES ${QM_FILES}
  DESTINATION share/${PROJECTNAME}/i18n
  COMPONENT data
)

INSTALL (FILES
  ${PROJECTNAME}_untranslated.ts
  DESTINATION share/${PROJECTNAME}
  COMPONENT data
)
